--- a/index.html
+++ b/index.html
@@ -9,7 +9,28 @@
 
   <h1>Calmverse</h1>
   
-  <p>Welcome to Calmverse! This is a distributed social platform focused on constructive dialogue. Please feel free to leave a comment below.</p>
+  <p>Welcome to Calmverse! This is a distributed social platform focused on constructive dialogue. Please feel free to leave a comment below.
+
+  Unity - Indigo
+The depth of indigo captures the meaning of bonding and standing as one.
+
+Sustainability - Green
+Green nicely represents the environmental aspect of sustainability.
+
+Universal-Love - Red
+Red feels aligned with the passion and warmth of universal love.
+
+Celebrate - Yellow
+Yellow fits the joy and enthusiasm of celebrating others.
+
+Balance - Orange
+Orange evokes the equilibrium and harmony of balance.
+
+Creativity - Violet
+Violet's majesty and intrigue reflect the magic of creativity.
+
+Helping - Blue
+The soothing calm of blue suits the goodwill of helping others.</p>
   
   <form>
     <textarea placeholder="Enter your comment"></textarea>
