--- a/index.html
+++ b/index.html
@@ -1,35 +1,12 @@
-<!-- index.html -->
-
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Calmverse</title>
-</head>
+
 <body>
+  <textarea id="postContent"></textarea>
+  <button id="submitPost">Submit Post</button>
 
-  <h1>Calmverse</h1>
-  
-  <p>Welcome to Calmverse! This is a distributed social platform focused on constructive dialogue. Please feel free to leave a comment below.
+  <div id="posts"></div>
 
-Unity - Indigo
-
-Sustainability - Green
-
-Universal-Love - Red
-
-Celebrate - Yellow
-
-Balance - Orange
-
-Creativity - Violet
-
-Helping - Blue
-</p>
-  
-  <form>
-    <textarea placeholder="Enter your comment"></textarea>
-    <button type="submit">Submit Comment</button>
-  </form>
-
+  <script src="script.js"></script>
 </body>
+
 </html>
