next test end-to-end

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,15 @@
+<!DOCTYPE html>
 <html>
-
 <body>
+
   <h1>Calmverse</h1>
+  
   <textarea id="postContent"></textarea>
   <button id="submitPost">Submit Post</button>
 
   <div id="posts"></div>
 
   <script src="/script.js"></script>
-</body>
 
+</body>
 </html>
